force-app/main/default/objects/File_Metadata__c/File_Metadata__c.object-meta.xml
<CustomObject>
    <description>To store the metadata for the ECM files</description>
    <label>File Metadata</label>
    <nameField>
        <displayFormat>FM-{00000}</displayFormat>
        <label>File Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>