force-app/main/default/objects/File_Metadata__c/fields/Adjuster_Id__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjuster Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>