force-app/main/default/objects/File_Metadata__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>File Metadata</relationshipLabel>
    <relationshipName>File_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>