force-app/main/default/objects/File_Metadata__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <description>Claim number from Case object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>