force-app/main/default/objects/File_Metadata__c/fields/Claim_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reported_Date__c</fullName>
    <description>Populated from Case object Incident Date reported</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Reported Date</label>
    <type>DateTime</type>
</CustomField>