force-app/main/default/objects/File_Metadata__c/fields/Claim_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Sub_Type__c</fullName>
    <description>populate it from the Case, If AB or BI or for Others its General</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Sub Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>