force-app/main/default/objects/File_Metadata__c/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <description>Name of the claimant(Populate it from the exposure)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>