force-app/main/default/objects/File_Metadata__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <description>Communication type is defaulted to Email - Value should be 6</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>