force-app/main/default/objects/File_Metadata__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Count of files - Its always zero unless its a zip ( populated by the handler)</description>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>