force-app/main/default/objects/File_Metadata__c/fields/Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loss__c</fullName>
    <description>Date of loss from Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Loss</label>
    <type>DateTime</type>
</CustomField>