force-app/main/default/objects/File_Metadata__c/fields/Date_received__c.field-meta.xml
<CustomField>
    <fullName>Date_received__c</fullName>
    <description>Email date received</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date received</label>
    <type>DateTime</type>
</CustomField>