force-app/main/default/objects/File_Metadata__c/fields/Document_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Processing_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>