force-app/main/default/objects/File_Metadata__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <description>Default value is assigned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Status</label>
    <length>254</length>
    <type>Text</type>
</CustomField>