force-app/main/default/objects/File_Metadata__c/fields/Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Document_Title__c</fullName>
    <description>The title of the Document - Populate it from Email Message object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>