force-app/main/default/objects/File_Metadata__c/fields/Exposure_Number__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Number__c</fullName>
    <description>Populate it from AB/BI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exposure Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>