force-app/main/default/objects/File_Metadata__c/fields/File_Deleted__c.field-meta.xml
<CustomField>
    <fullName>File_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked once file ( Content Document) is deleted from the salesforce - We are not deleting the metadata, only binary is deleted(Content Document)</description>
    <label>File Deleted</label>
    <type>Checkbox</type>
</CustomField>