force-app/main/default/objects/File_Metadata__c/fields/File_Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Mime_Type__c</fullName>
    <description>File type - Not exact Mime type but the file type - Populate it from Content Version</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Mime Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>