force-app/main/default/objects/File_Metadata__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>Size of the file  - Populate it from Content Version</description>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>