force-app/main/default/objects/File_Metadata__c/fields/Handler_ECM_Failure__c.field-meta.xml
<CustomField>
    <fullName>Handler_ECM_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handler/ECM Failed</label>
    <type>Checkbox</type>
</CustomField>