force-app/main/default/objects/File_Metadata__c/fields/Insure_Name__c.field-meta.xml
<CustomField>
    <fullName>Insure_Name__c</fullName>
    <description>Get it from the case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insured Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>