force-app/main/default/objects/File_Metadata__c/fields/LanId__c.field-meta.xml
<CustomField>
    <fullName>LanId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LanId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>