force-app/main/default/objects/File_Metadata__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>LOB from case object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Line of Business</label>
    <length>254</length>
    <type>Text</type>
</CustomField>