force-app/main/default/objects/File_Metadata__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>Email Message SLF Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MessageId</label>
    <length>254</length>
    <type>Text</type>
</CustomField>