force-app/main/default/objects/File_Metadata__c/fields/Meta_Junction__c.field-meta.xml
<CustomField>
    <fullName>Meta_Junction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta Junction</label>
    <referenceTo>Meta_Junction__c</referenceTo>
    <relationshipLabel>File Metadata</relationshipLabel>
    <relationshipName>File_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>