force-app/main/default/objects/File_Metadata__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Policy number for JSON</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>