force-app/main/default/objects/File_Metadata__c/fields/Processed_by_ECM__c.field-meta.xml
<CustomField>
    <fullName>Processed_by_ECM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked once ECM has finished processing the document ( updated the ECM Id)</description>
    <label>Processed by ECM</label>
    <type>Checkbox</type>
</CustomField>