force-app/main/default/objects/File_Metadata__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province of Issuance in Case Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Province</label>
    <length>254</length>
    <type>Text</type>
</CustomField>