force-app/main/default/objects/File_Metadata__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>Reference Id : Lookup to the Content Version Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>