force-app/main/default/objects/File_Metadata__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>Derive the region code on the basis of some logic provided by handler team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>