force-app/main/default/objects/File_Metadata__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <description>email address of the sender who sent the email - Populate it from Email  Message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sender Email</label>
    <length>254</length>
    <type>Text</type>
</CustomField>