force-app/main/default/objects/File_Metadata__c/fields/Sent_to_Handler__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated once the document is processed from the batch job</description>
    <label>Sent to Handler</label>
    <type>Checkbox</type>
</CustomField>