force-app/main/default/objects/File_Metadata__c/fields/Under_Writing_Company__c.field-meta.xml
<CustomField>
    <fullName>Under_Writing_Company__c</fullName>
    <description>Populate it from Policy Issuing group in Case object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Under Writing Company</label>
    <length>254</length>
    <type>Text</type>
</CustomField>