force-app/main/default/objects/File_Metadata__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>