force-app/main/default/objects/File_Metadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Title__c</columns>
    <columns>File_Mime_Type__c</columns>
    <columns>MessageId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sent_to_Handler__c</columns>
    <columns>Processed_by_ECM__c</columns>
    <columns>Handler_ECM_Failure__c</columns>
    <columns>File_Deleted__c</columns>
    <columns>Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>