force-app/main/default/objects/File_Metadata__c/listViews/eCM_Handler_Failed.listView-meta.xml
<ListView>
    <fullName>eCM_Handler_Failed</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Document_Title__c</columns>
    <columns>Document_Processing_Status__c</columns>
    <columns>File_Mime_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Handler_ECM_Failure__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sent_to_Handler__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Document_Processing_Status__c</field>
        <operation>notEqual</operation>
        <value>FAILED_FILE_TYPE_VALIDATIONS : fileTypeExtension : zip</value>
    </filters>
    <label>eCM/Handler Failed</label>
    <language>en_US</language>
</ListView>